finished landing animation and fixed dates spacing

--- a/css/landingBackground.css
+++ b/css/landingBackground.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .landing h1,
@@ -28,6 +29,9 @@
   flex-direction: column;
 }
 
+.landingTitle  {
+  text-align: right;
+}
 .landingTitle img {
   height: 40vh;
 }
